Tweaks some footer background and alignment. Tweaks logo images. Fixes big image in steam page

--- a/src/_styles/organisms/_footer.scss
+++ b/src/_styles/organisms/_footer.scss
@@ -25,7 +25,6 @@ footer {
 
 #contact {
     background-color: $vb-dark;
-    padding: 128px 16px;
 }
 
 //>1200px
